deployments/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: osm-device-adapter
  labels:
    app: osm-device-adapter
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: osm-device-adapter
